<resources>
    <string name="app_name">WebGuard</string>
    <string name="vpn_start_text">To protect browsers from dangerous sites, advertising and to improve user privacy online click \'Activate\' and confirm the creation of a secure VPN-connection.</string>
    <string name="start">Activate</string>
    <string name="options">Options</string>
    <string name="vpn_unavailable">VPN service is unavailable on this version of Android (or firmware)!\nMake a complaint to your device manufacturer.</string>
    <string name="active">Service is active</string>
    <string name="disabled">Service is disabled</string>
    <string name="ui">Interface</string>
    <string name="pref_social_summary_on">Do not fetch widgets, comments and buttons on other web-pages</string>
    <string name="pref_social_summary_off">Let them know all web-pages you are openning</string>
    <string name="service_restarted">WebGuard service restarted...</string>
    <string name="malicious_sites">Malicious sites</string>
    <string name="block_malicious_sites">Block malicious and fraud sites</string>
    <string name="apk_download">Application download</string>
    <string name="block_apk_download">Block application download from web-sites</string>
    <string name="privacy">Anonimity</string>
    <string name="privacy_and_compression">Anonimity &amp; compression</string>
    <string name="change_browser_id">Change User-Agent</string>
    <string name="change_browser_id_summary">Change browser UA randomly. Hardens spying on user.</string>
    <string name="set_desktop_browser_id">Desktop User-Agent</string>
    <string name="set_desktop_browser_id_summary">Change mobile browser UA to desktop. Allow to view full version of sites.</string>
    <string name="paranoid_privacy">Paranoid privacy</string>
    <string name="block_data_from_other_site">Block all data from third-party sites</string>
    <string name="block_social_networks_spying">Block social network spying</string>
    <string name="security">Security</string>
    <string name="help">Help</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="statistics">Statistics</string>
    <string name="license_dialog_text"><![CDATA[Pressing the button \'I agree\', you agree to our <a href="#s1">terms of use</a> and <a href="#s2">privacy policy</a>.]]></string>
    <string name="i_agree">I agree</string>
    <string name="i_disagree">I disagree</string>
    <string name="license_argeement">License agreement</string>
    <string name="license_agreement_changes">Changes in license agreement</string>
    <string name="starting_app">Starting Webguard...</string>
    <string name="message_sent">Your message has been successfully sent to the developer of WebGuard.</string>
    <string name="message_undelivered">Your message can not be sent.\nPlease, check your internet connection and try again.</string>
    <string name="message_noemail">You didn\'t give your email address. We won\'t be able to contact you to resolve the issue.</string>
    <string name="your_mail">Your E-Mail</string>
    <string name="message">Message</string>
    <string name="send">Send</string>
    <string name="report_error">Error!</string>
    <string name="malware_site_detected">Malware site!</string>
    <string name="fishing_site_detected">Fishing site!</string>
    <string name="paid_site_detected">Paid site!</string>
    <string name="malware_site_blocked">Connection to malware site %s has been blocked</string>
    <string name="fishing_site_blocked">Connection to fishing site %s has been blocked</string>
    <string name="paid_site_blocked">Working with site %s can be extra-chargeable. It is recommended to read site policy.</string>
    <string name="blocked_error">Hello!\nIn my opinion domain %s is being blocked by WebGuard by mistake.</string>
    <string name="tryfree">Try free</string>
    <string name="social_type_other">Other</string>
    <string name="social_type_livejournal">Live Journal</string>
    <string name="social_type_vk">VK.com</string>
    <string name="social_type_ok">Odnoklassniki</string>
    <string name="social_type_moikrug">Moy Krug</string>
    <string name="help1"><![CDATA[WebGuard is made to effectively block advertisement on web sites in every web browser.]]></string>
    <string name="help2"><![CDATA[It blocks tracking systems and counters, which aim to get your history of browsing to sell it to third-party companies, sometimes in violation of privacy, security and sometimes even ethics.]]></string>
    <string name="help3"><![CDATA[Many users don\'t know, that their history is gathered by all social networks also by their widgets and buttons embedded on other sites.]]></string>
    <string name="help4"><![CDATA[Besides blocking advertising and tracking systems, it blocks compulsive attempts of sites and advertising systems to deliver malicious applications to the user device.]]></string>
    <string name="help5"><![CDATA[Effectively blocking access to websites that distribute malicious applications, trojans that can jeopardize your privacy, spend significant funds from the user\'s account, or take full control over the device.]]></string>
    <string name="help6"><![CDATA[This application works by creating a VPN-like network tunnel. Only in this case the data is not going through our servers, but via a filter embedded in the application.]]></string>
    <string name="help7"><![CDATA[For the application to function properly it should be running all the time, it is shown by the system icon in notification area. ]]></string>
    <string name="help8"><![CDATA[When the network connection is disabled the VPN service itself goes off, freeing up resources, in this case, the icon will be hidden until the next internet connection.]]></string>
    <string name="help9"><![CDATA[Data compression drastically reduces page load time and minimizes traffic consumption.\nThis option is very useful for those who does not use expensive prepaid traffic plans but wants to save money.\nIt is recommended to disable traffic options and compression in browsers while using our feature.]]></string>
    <string name="help10"><![CDATA[The anonymity option allows you to hide your real IP address, which is used by any website to track your location, and many web-tracking systems can collect the "user profile" and connect it to you.\nIn the countries with totalitarian regime and total censorship it allows viewing blocked sites and leave anonymized comments.]]></string>
    <string name="help11"><![CDATA[In the case of using compression without anonymity connection with the sites will also be carried out through our servers, but the site will be sent a special header that explains what IP-address the user came from.\nFurther reaction to this header depends on the implementation of the specific site.]]></string>
    <string name="help_purpose">What is it for?</string>
    <string name="how_does_it_work">How does it work?</string>
    <string name="vpn_error">Cannot establish VPN\nUser must give permission.</string>
    <string name="vpn_exception">Your firmware doesn\'t support establishing VPN connections or the VPN interface is in wrong state, try to reboot your device.</string>
    <string name="vpn_bug_1900"><![CDATA[Oops! We got a bug problem (see Android <a href=\"https://code.google.com/p/android-developer-preview/issues/detail?id=1900\">issue #1900</a>). Click \'Continue\', in the next window, click \'Disconnect\' and re-enable WebGuard. If the window doesn\'t appear, you need to reboot device and start WebGuard.]]></string>
    <string name="send_message_to_dev">Send message to developer</string>
    <string name="send_feedback">Send feedback</string>
    <string name="send_feedback_summary">Message to developer</string>
    <string name="message_to_developer">Message to developer</string>
    <string name="please_wait">Please wait...</string>
    <string name="error">Error</string>
    <string name="c0ntinue">Continue</string>
    <string name="skip">Skip</string>
    <string name="close">Close</string>
    <string name="installer_error">Unfortunately, your device have installed or updated WebGuard with errors. Some libraries are unavailable.\nPlease, uninstall WebGuard and reinstall it again.</string>
    <string name="what_new">What\'s new?</string>
    <string name="app_updated">WebGuard updated</string>
    <string name="tap_to_read_news">Tap to read what\'s new...</string>
    <string name="evaluate">Evaluate</string>
    <string name="warning">Warning</string>
    <string name="third_party_warning">Be prepared - in this mode some sites can work not as expected.</string>
    <string name="proxy_needs_to_be_disabled">WebGuard has detected that there is a proxy set by ###, which is interferring with it. We tried to disable it, but unfortunately it sets itself back.\nIn order to use WebGuard properly you should disable that application.</string>
    <string name="proxy_needs_to_be_disabled2">WebGuard has detected that there is a proxy set by unidentified application, which is interferring with it. We tried to disable it, but unfortunately it sets itself back.\nIn order to use WebGuard properly you should disable the application with proxy.</string>
    <string name="try_to_disable_proxy">Disable</string>
    <string name="app_not_found">(name not found)</string>
    <string name="no_needed_permissions">WebGuard has detected that you or the system have not granted it some needed permissions. Therefore, it can not work as expected.\nYou should reinstall this app for it to work properly.</string>
    <string name="use_compression">Use data compression</string>
    <string name="use_compression_summary">Save money &amp; time</string>
    <string name="advanced_options">Advanced options</string>
    <string name="anonymize">Anonymize</string>
    <string name="anonymize_summary">Hide your true location</string>
    <string name="anonymize_apps">Anonymize apps</string>
    <string name="anonymize_apps_summary">Hide your true location in apps</string>
    <string name="gateway_country">Country</string>
    <string name="choose_country">Choose gateway country</string>
    <string name="social_networks">Social networks</string>
    <string name="advanced_summary">Options for advanced users</string>
    <string name="proxy_country_auto">Automatic</string>
    <string name="proxy_country_at">Austria</string>
    <string name="proxy_country_au">Australia</string>
    <string name="other">Other</string>
    <string name="tryfree_text">Please confirm you\'re not a robot to get a free subscription for XXX days.</string>
    <string name="compression_and_anonymity">Compression and anonymity</string>
    <string name="disable_security">Disable protection</string>
    <string name="confirm">Confirm</string>
    <string name="refresh">Refresh</string>
    <string name="security_and_ads"><![CDATA[Security & Ads]]></string>
    <string name="use_light_theme">Light theme</string>
    <string name="use_light_theme_summary">Use light application theme.</string>
    <string name="collect_debug_info">Debug info</string>
    <string name="collect_debug_info_summary">Collect additional debug information for developers (~5MB memory usage)</string>
    <string name="clean_caches">Clean caches</string>
    <string name="check_subscription">Check subscription</string>
    <string name="check_subscription_summary">If you have subscription issues use this button</string>
    <string name="buy_subscription">Buy subscription</string>
    <string name="only_for_browsers">Only for browsers</string>
    <string name="anonymize_and_compress_only_browsers"><![CDATA[Anonymity & compression only in browsers]]></string>
    <string name="need_subscription_text">You will need to get a subscription before you can start using WebGuard.</string>
    <string name="firewall">Firewall</string>
    <string name="firewall_summary">Traffic control</string>
</resources>