<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent" >

    <EditText android:layout_height="wrap_content"
              android:layout_width="match_parent"
              android:id="@+id/mail"
              android:inputType="textWebEmailAddress"
              android:maxLength="100"
              android:hint="@string/your_mail" />

    <EditText android:layout_width="match_parent"
              android:layout_height="0dp"
              android:layout_weight="1"
              android:hint="@string/message"
              android:singleLine="false"
              android:gravity="top|left"
              android:inputType="textCapSentences|textLongMessage|textMultiLine"
              android:id="@+id/message"
              android:maxLength="1000"
              android:focusable="true"
              android:focusableInTouchMode="true"
              android:descendantFocusability="beforeDescendants" />

    <Button android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/send"
            android:id="@+id/send_button"
            android:onClick="sendMessageClick" />

</LinearLayout>
