<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_margin="5dp" >

    <TextView android:layout_width="match_parent"
              android:layout_height="0px"
              android:text="@string/vpn_start_text"
              style="@android:style/TextAppearance.Medium"
              android:layout_margin="2dp"
              android:layout_weight="1" />

    <Button android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:textStyle="bold"
            android:textColor="#00DD00"
            android:onClick="startVPNClick"
            android:text="@string/start"
            android:id="@+id/activate" />

    <Button android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:textStyle="bold"
            android:textColor="#DD0000"
            android:onClick="stopClick"
            android:text="@string/disable_security" />

    <!--
    <LinearLayout android:orientation="horizontal"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content" >
    </LinearLayout>
    -->

</LinearLayout>
