<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <!--
    <LinearLayout android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal" >

        <ImageView android:layout_width="@android:dimen/app_icon_size"
                   android:layout_height="@android:dimen/app_icon_size"
                   android:layout_margin="3dp"
                   android:src="@drawable/icon" />

        <TextView android:layout_width="match_parent"
                  android:layout_height="@android:dimen/app_icon_size"
                  android:singleLine="true"
                  android:gravity="center_vertical"
                  style="@android:style/TextAppearance.Medium"
                  android:text="Лицензионное соглашение" />

    </LinearLayout>
    -->

    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginLeft="5dp"
              android:layout_marginRight="5dp"
              android:layout_marginBottom="7dp"
              android:layout_marginTop="7dp"
              style="@android:style/TextAppearance.Theme.Dialog"
              android:id="@+id/dialog_text"
              android:text="@string/license_dialog_text" />

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal"
                  android:id="@+id/ok_cancel" >

        <Button android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/i_disagree"
                android:onClick="onRefuseClick"
                android:id="@+id/no_button" />

        <Button android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/i_agree"
                android:onClick="onAgreeClick"
                android:id="@+id/agree_button" />

    </LinearLayout>

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal"
                  android:id="@+id/ok" >

        <Button android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="OK"
                android:onClick="onOkayClick"
                android:id="@+id/ok_button" />

    </LinearLayout>

</LinearLayout>
